--- a/package.json
+++ b/package.json
@@ -13,21 +13,34 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@types/jquery": "3.3.33",
     "bootstrap": "^5.1.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.2",
     "gulp": "4.0.2",
     "http-errors": "~1.6.3",
     "jquery": "^1.9.1",
-    "mongoose": "^6.0.11",
+    "mongoose": "^6.0.12",
     "morgan": "~1.9.1",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0",
     "popper.js": "^1.16.1"
   },
   "description": "portfolio",
   "main": "app.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/connect-flash": "0.0.37",
+    "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
+    "@types/mongoose": "^5.11.97",
+    "@types/passport": "^1.0.7",
+    "@types/passport-local": "^1.0.34",
+    "@types/passport-local-mongoose": "^6.1.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/shahrzadko/Assignment1.git"
